fixed styling to for containers that are overlapping.

--- a/client/src/components/Map/style.css
+++ b/client/src/components/Map/style.css
@@ -1,5 +1,5 @@
 .map_box_container {
-    margin-top: 12em;
+    margin-top: 17em;
 }
 .mapContainer {
     position: absolute;
